2010-04-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* po/POTFILES: Renamed multiboot_loader.c to multiboot.c

2010-04-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/hostdisk.c (make_device_name): Change to new partition naming.

2010-04-17  Vladimir Serbinenko  <phcoder@gmail.com>

	* disk/lvm.c (grub_lvm_memberlist): Issue an error if pv->disk = 0.

2010-04-17  Christian Franke <franke@computer.org>

	* Makefile.in: Add missing localedir setting.

2010-04-14  Colin Watson  <cjwatson@ubuntu.com>

	Restore TEXTDOMAINDIR correction from r1889, lost apparently by
	mistake in r2156.  Noticed by Anthony Fok.

	* util/grub.d/10_kfreebsd.in (TEXTDOMAINDIR): Set to lowercased
	@localedir@.
	* util/grub.d/10_linux.in (TEXTDOMAINDIR): Likewise.

2010-04-14  BVK Chaitanya  <bvk.groups@gmail.com>

	Fix a spurious, uninitialized variable warning.

	* loader/i386/bsdXX.c (grub_freebsd_load_elfmodule_obj):
	Initialize variable, shdr.
	(grub_freebsd_load_elfmodule): Likewise.
	(grub_freebsd_load_elf_meta): Likewise.

2010-04-13  BVK Chaitanya  <bvk.groups@gmail.com>

	Fix for escaped dollar in double quoted strings.

	* script/yylex.l: Updated flex rules.
	* conf/tests.rmk: Rule for new testcase.
	* tests/grub_script_dollar.in: New testcase.

2010-04-13  Carles Pina i Estany  <carles@pina.cat>
2010-04-13  Colin Watson  <cjwatson@ubuntu.com>

	Enclose all translated strings in grub.cfg in single quotes, and
	escape them appropriately (Ubuntu bug #552921).

	* util/grub-mkconfig_lib.in (gettext_quoted): New function.
	* util/grub.d/10_hurd.in: Use it.
	* util/grub.d/10_kfreebsd.in (kfreebsd_entry): Likewise.
	* util/grub.d/10_linux.in (linux_entry): Likewise.

2010-04-11  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix cygwin compilation.

	* configure.ac: Define NEED_REGISTER_FRAME_INFO.
	* include/grub/misc.h (__register_frame_info)
	[NEED_REGISTER_FRAME_INFO && !UTIL]: New export.
	(__deregister_frame_info) [NEED_REGISTER_FRAME_INFO && !UTIL]: Likewise.